--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,11 @@
         <artifactId>spotbugs-maven-plugin</artifactId>
         <version>3.1.10</version>
       </plugin>
+      <plugin>
+        <groupId>org.pitest</groupId>
+        <artifactId>pitest-maven</artifactId>
+        <version>1.4.5</version>
+      </plugin>
     </plugins>
   </build>
 
