--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,10 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
         <version>3.0.0</version>
+        <configuration>
+          <configLocation>src/test/resources/checkstyle-checker.xml</configLocation>
+          <linkXRef>false</linkXRef>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>com.github.spotbugs</groupId>
